Resolve compile order; add contain option; add col__stretch

--- a/src/styles/05.utilities/sizing/width.scss
+++ b/src/styles/05.utilities/sizing/width.scss
@@ -6,6 +6,7 @@
 
 .mw--0    { min-width: 0; }
 .mw--100  { min-width: 100%; }
+.mw--none { max-width: none; }
 
 .w--fit {
   width: auto;
